fixed overflow-x issue

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ html{
   font-size: 95%;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 ::-webkit-scrollbar{
   scroll-behavior: smooth;
   width: 6px;
